[gd_scene load_steps=18 format=2]

[ext_resource path="res://Pony.gd" type="Script" id=1]
[ext_resource path="res://pony/MyLittlePony.glb" type="PackedScene" id=2]
[ext_resource path="res://audio/tak.ogg" type="AudioStream" id=3]
[ext_resource path="res://audio/jump.ogg" type="AudioStream" id=4]
[ext_resource path="res://audio/ching.ogg" type="AudioStream" id=5]
[ext_resource path="res://audio/Rarity.ogg" type="AudioStream" id=6]
[ext_resource path="res://audio/AppleJack.ogg" type="AudioStream" id=7]
[ext_resource path="res://audio/FlutterShy.ogg" type="AudioStream" id=8]
[ext_resource path="res://audio/RainbowDash.ogg" type="AudioStream" id=9]
[ext_resource path="res://audio/TwilightSparkle.ogg" type="AudioStream" id=10]
[ext_resource path="res://audio/PinkeyPie.ogg" type="AudioStream" id=11]
[ext_resource path="res://audio/magic.ogg" type="AudioStream" id=12]
[ext_resource path="res://audio/SunsetShimmer.ogg" type="AudioStream" id=13]
[ext_resource path="res://audio/Phanfare.ogg" type="AudioStream" id=14]

[sub_resource type="SphereShape" id=1]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.176471, 1, 0.0313726, 1 )
metallic = 0.45
roughness = 0.46
distance_fade_mode = 1
distance_fade_min_distance = 0.1
distance_fade_max_distance = 10.0

[sub_resource type="SphereMesh" id=3]
material = SubResource( 4 )
radial_segments = 5
rings = 5

[node name="KinematicBody" type="KinematicBody"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )

[node name="Pony" parent="." instance=ExtResource( 2 )]
transform = Transform( -2.18557e-08, 0.5, -2.18557e-08, 0, -2.18557e-08, -0.5, -0.5, -2.18557e-08, 9.55343e-16, -0.804361, 0.295835, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.324251, 0, 0, 0, 0.572448, 0, 0, 0, 0.572448, 0, 0.026, 0 )
shape = SubResource( 1 )

[node name="cristal" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.306845, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="run" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 0.01
mix_target = 2

[node name="ching" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="magic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="boost" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="PlayerName1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="PlayerName2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="PlayerName3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="PlayerName4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="PlayerName5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="PlayerName6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="PlayerName7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.25, 0.4, 0 )
